--- a/FrontEnd/css/style.css
+++ b/FrontEnd/css/style.css
@@ -1,11 +1,26 @@
 body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: red;
+}
+.paisaje {
     width: 100%;
     height: 100%;
+    object-fit: cover; 
+    position: absolute;
+    top: 0;
+    left: 0;
 }
-
-/* Estilo para la clase ternurines */
 .ternurines {
     position: relative;
-    width: 300px;
-    height: 200px
+    width: 100px;
+    height: 100px;
+    z-index: 1;
+    margin-right: -349px;
+    margin-top: -30px;
 }
